# sorcerer

./: .gitignore  README.md  pyproject.toml
data/: abs_mean_gradient_training_data.pkl
examples/: load_data.py  main.py  metric.py
src/: config.py  load_data.py  model_components.py  sorcerer_model.py  sorcerer_model2.py  utils.py
src/sorcerer/: config.py  model_components.py  sorcerer_model.py  utils.py
test/: main.py
