[tool.poetry]
name = "sorcerer-model"
version = "0.3.0"
description = "A Bayesian hierarchical model for time series forecasting"
authors = ["Jonas Petersen"]
readme = ["README.md"]
repository = "https://github.com/KaptajnFjaesing/sorcerer"
packages = [{include = "sorcerer_model", from = "src"}]

[tool.poetry.dependencies]
python = "3.11.8"
pymc = "^5.10.4"
numpy = "^1.26.4"
pandas = "^2.2.1"
arviz = "0.19.0"
pytensor = "^2.11.2"
typing-extensions = "^4.7.1"  # To ensure compatibility
spyder-kernels = "2.5"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

